增加邮件验证码相关配置项和处理逻辑

--- a/misc/ymp-conf.properties
+++ b/misc/ymp-conf.properties
@@ -14,6 +14,12 @@ ymp.configs.module.captcha.storage_adapter_class=
 # \u8EAB\u4EFD\u4EE4\u724C\u6807\u8BC6\u6269\u5C55\u5904\u7406\u5668, \u9ED8\u8BA4\u503C: \u7A7A
 ymp.configs.module.captcha.token_processor_class=
 
+# \u90AE\u4EF6\u9A8C\u8BC1\u7801\u53D1\u9001\u670D\u52A1\u63D0\u4F9B\u8005\u7C7B, \u9ED8\u8BA4\u503C: \u7A7A
+ymp.configs.module.captcha.mail_send_provider_class=
+
+# \u76F8\u540C\u4EE4\u724C\u6807\u8BC6\u8303\u56F4\u7684\u90AE\u4EF6\u9A8C\u8BC1\u7801\u91CD\u590D\u53D1\u9001\u7684\u662F\u65F6\u95F4\u95F4\u9694(\u79D2), \u9ED8\u8BA4\u503C: 300\u79D2
+ymp.configs.module.captcha.mail_send_time_interval=
+
 # \u624B\u673A\u77ED\u4FE1\u9A8C\u8BC1\u7801\u53D1\u9001\u670D\u52A1\u63D0\u4F9B\u8005\u7C7B, \u9ED8\u8BA4\u503C: \u7A7A
 ymp.configs.module.captcha.sms_send_provider_class=
 
