--- a/misc/ymp-conf.properties
+++ b/misc/ymp-conf.properties
@@ -2,6 +2,9 @@
 # module.captcha \u6A21\u5757\u521D\u59CB\u5316\u53C2\u6570
 #-------------------------------------
 
+# \u9A8C\u8BC1\u7801\u6A21\u5757\u662F\u5426\u5DF2\u88AB\u7981\u7528(\u7981\u7528\u540E\u5C06\u5FFD\u7565\u6240\u6709\u9A8C\u8BC1\u7801\u76F8\u5173\u53C2\u6570\u9A8C\u8BC1), \u9ED8\u8BA4\u503C: false
+ymp.configs.module.captcha.disabled=
+
 # \u662F\u5426\u5F00\u542F\u8C03\u8BD5\u6A21\u5F0F(\u8C03\u8BD5\u6A21\u5F0F\u4E0B\u63A7\u5236\u53F0\u5C06\u8F93\u51FA\u751F\u6210\u7684\u9A8C\u8BC1\u7801, \u540C\u65F6\u77ED\u4FE1\u9A8C\u8BC1\u7801\u4E5F\u4E0D\u4F1A\u88AB\u771F\u6B63\u53D1\u9001), \u9ED8\u8BA4\u503C: false
 ymp.configs.module.captcha.dev_mode=
 
