--- a/misc/ymp-conf.properties
+++ b/misc/ymp-conf.properties
@@ -20,6 +20,12 @@ ymp.configs.module.captcha.token_processor_class=
 # \u90AE\u4EF6\u9A8C\u8BC1\u7801\u53D1\u9001\u670D\u52A1\u63D0\u4F9B\u8005\u7C7B, \u9ED8\u8BA4\u503C: \u7A7A
 ymp.configs.module.captcha.mail_send_provider_class=
 
+# \u90AE\u4EF6\u9A8C\u8BC1\u7801\u6A21\u677F\u89C6\u56FE\u8DEF\u5F84, \u9ED8\u8BA4\u503C: captcha_email
+ymp.configs.module.captcha.mail_template_view=
+
+# \u9A8C\u8BC1\u7801\u90AE\u4EF6\u4E3B\u9898, \u9ED8\u8BA4\u503C: \u7A7A
+ymp.configs.module.captcha.mail_subject=
+
 # \u76F8\u540C\u4EE4\u724C\u6807\u8BC6\u8303\u56F4\u7684\u90AE\u4EF6\u9A8C\u8BC1\u7801\u91CD\u590D\u53D1\u9001\u7684\u662F\u65F6\u95F4\u95F4\u9694(\u79D2), \u9ED8\u8BA4\u503C: 300\u79D2
 ymp.configs.module.captcha.mail_send_time_interval=
 
