增加自定义验证码生成器配置

--- a/misc/ymp-conf.properties
+++ b/misc/ymp-conf.properties
@@ -11,6 +11,9 @@ ymp.configs.module.captcha.dev_mode=
 # \u9A8C\u8BC1\u7801\u670D\u52A1\u63D0\u4F9B\u8005\u7C7B, \u9ED8\u8BA4\u503C: net.ymate.module.captcha.impl.DefaultCaptchaProvider
 ymp.configs.module.captcha.provider_class=
 
+# \u81EA\u5B9A\u4E49\u9A8C\u8BC1\u7801\u751F\u6210\u5668\u7C7B, \u9ED8\u8BA4\u503C: \u7A7A
+ymp.configs.module.captcha.token_generator_class=
+
 # \u9A8C\u8BC1\u7801\u5B58\u50A8\u9002\u914D\u5668\u7C7B, \u9ED8\u8BA4\u503C: net.ymate.module.captcha.impl.DefaultCaptchaStorageAdapter
 ymp.configs.module.captcha.storage_adapter_class=
 
