--- a/misc/ymp-conf.properties
+++ b/misc/ymp-conf.properties
@@ -14,32 +14,14 @@ ymp.configs.module.captcha.provider_class=
 # \u81EA\u5B9A\u4E49\u9A8C\u8BC1\u7801\u751F\u6210\u5668\u7C7B, \u9ED8\u8BA4\u503C: \u7A7A
 ymp.configs.module.captcha.token_generator_class=
 
-# \u9A8C\u8BC1\u7801\u5B58\u50A8\u9002\u914D\u5668\u7C7B, \u9ED8\u8BA4\u503C: net.ymate.module.captcha.impl.DefaultCaptchaStorageAdapter
+# \u9A8C\u8BC1\u7801\u5B58\u50A8\u9002\u914D\u5668\u7C7B, \u5FC5\u987B, \u9ED8\u8BA4\u503C: \u7A7A
 ymp.configs.module.captcha.storage_adapter_class=
 
-# \u8EAB\u4EFD\u4EE4\u724C\u6807\u8BC6\u6269\u5C55\u5904\u7406\u5668, \u9ED8\u8BA4\u503C: \u7A7A
-ymp.configs.module.captcha.token_processor_class=
+# \u4F5C\u7528\u57DF\u6807\u8BC6\u6269\u5C55\u5904\u7406\u5668, \u5F00\u542F\u9519\u8BEF\u8BB0\u6570\u65F6\u4E3A\u5FC5\u987B, \u9ED8\u8BA4\u503C: \u7A7A
+ymp.configs.module.captcha.scope_processor_class=
 
-# \u90AE\u4EF6\u9A8C\u8BC1\u7801\u53D1\u9001\u670D\u52A1\u63D0\u4F9B\u8005\u7C7B, \u9ED8\u8BA4\u503C: \u7A7A
-ymp.configs.module.captcha.mail_send_provider_class=
-
-# \u90AE\u4EF6\u9A8C\u8BC1\u7801\u6A21\u677F\u89C6\u56FE\u8DEF\u5F84, \u9ED8\u8BA4\u503C: captcha_email
-ymp.configs.module.captcha.mail_template_view=
-
-# \u9A8C\u8BC1\u7801\u90AE\u4EF6\u4E3B\u9898, \u9ED8\u8BA4\u503C: \u7A7A
-ymp.configs.module.captcha.mail_subject=
-
-# \u76F8\u540C\u4EE4\u724C\u6807\u8BC6\u8303\u56F4\u7684\u90AE\u4EF6\u9A8C\u8BC1\u7801\u91CD\u590D\u53D1\u9001\u7684\u662F\u65F6\u95F4\u95F4\u9694(\u79D2), \u9ED8\u8BA4\u503C: 300\u79D2
-ymp.configs.module.captcha.mail_send_time_interval=
-
-# \u624B\u673A\u77ED\u4FE1\u9A8C\u8BC1\u7801\u53D1\u9001\u670D\u52A1\u63D0\u4F9B\u8005\u7C7B, \u9ED8\u8BA4\u503C: \u7A7A
-ymp.configs.module.captcha.sms_send_provider_class=
-
-# \u624B\u673A\u77ED\u4FE1\u9A8C\u8BC1\u7801\u5185\u5BB9\u6A21\u677F, \u9ED8\u8BA4\u503C: ${captcha}
-ymp.configs.module.captcha.sms_content_template=
-
-# \u76F8\u540C\u4EE4\u724C\u6807\u8BC6\u8303\u56F4\u7684\u77ED\u4FE1\u9A8C\u8BC1\u7801\u91CD\u590D\u53D1\u9001\u7684\u662F\u65F6\u95F4\u95F4\u9694(\u79D2), \u9ED8\u8BA4\u503C: 120\u79D2
-ymp.configs.module.captcha.sms_send_time_interval=
+# \u624B\u673A\u77ED\u4FE1\u6216\u90AE\u4EF6\u9A8C\u8BC1\u7801\u53D1\u9001\u670D\u52A1\u63D0\u4F9B\u8005\u7C7B, \u9ED8\u8BA4\u503C: \u7A7A
+ymp.configs.module.captcha.send_provider_class=
 
 # \u8BBE\u7F6E\u5728\u8FBE\u5230\u6307\u5B9A\u9519\u8BEF\u6B21\u6570\u4E0A\u9650\u540E\u5F00\u542F\u9A8C\u8BC1\u7801, \u9ED8\u8BA4\u503C: 0, \u8868\u793A\u4E0D\u5F00\u542F\u9519\u8BEF\u8BB0\u6570\u7279\u6027
 ymp.configs.module.captcha.need_captcha_wrong_times=
