优化调整配置参数并升级框架至v2.0.6及更新模块版本号为1.0.1

--- a/misc/ymp-conf.properties
+++ b/misc/ymp-conf.properties
@@ -72,4 +72,4 @@ ymp.configs.module.captcha.effect.blur=
 ymp.configs.module.captcha.effect.outline=
 
 # \u56FE\u7247\u751F\u6210\u6548\u679C\u53C2\u6570\u8BBE\u7F6E: \u65CB\u8F6C, \u9ED8\u8BA4\u503C: true
-ymp.configs.module.captcha.effect.ratale=
+ymp.configs.module.captcha.effect.rotate=
