--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,8 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <ymate.platform.version>2.0.6</ymate.platform.version>
+        <ymate.framework.version>2.0.6</ymate.framework.version>
     </properties>
 
     <developers>
@@ -132,17 +134,17 @@
             <dependency>
                 <groupId>net.ymate.platform</groupId>
                 <artifactId>ymate-platform-core</artifactId>
-                <version>2.0.4</version>
+                <version>${ymate.platform.version}</version>
             </dependency>
             <dependency>
                 <groupId>net.ymate.platform</groupId>
                 <artifactId>ymate-platform-webmvc</artifactId>
-                <version>2.0.4</version>
+                <version>${ymate.platform.version}</version>
             </dependency>
             <dependency>
                 <groupId>net.ymate.framework</groupId>
                 <artifactId>ymate-framework-core</artifactId>
-                <version>2.0.4</version>
+                <version>${ymate.framework.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
