--- a/misc/ymp-conf.properties
+++ b/misc/ymp-conf.properties
@@ -61,8 +61,8 @@ ymp.configs.module.captcha.format=
 # \u6216\u901A\u8FC7\u5B9E\u73B0net.ymate.module.captcha.ICaptchaFontsParser\u63A5\u53E3\u81EA\u5B9A\u4E49\u52A0\u8F7D\u65B9\u5F0F
 ymp.configs.module.captcha.fonts_parser_class=
 
-# \u81EA\u5B9A\u4E49\u5B57\u4F53, \u53EF\u9009\u53C2\u6570, \u5982: SansSerif,plain|Serif,bold|Monospaced,plain, \u591A\u4E2A\u5B57\u4F53\u7528'|'\u5206\u9694, \u9ED8\u8BA4: \u968F\u673A
-# \u5F53\u81EA\u5B9A\u4E49\u5B57\u4F53\u914D\u7F6E\u5206\u6790\u5668\u4E3A\u901A\u8FC7\u6587\u4EF6\u52A0\u8F7D\u65F6, \u914D\u7F6E\u683C\u5F0F: 0,${root}/fonts/SansSerif.ttf|...|1,/opt/share/Monospaced.ttf, \u5176\u4E2D\u76840\u548C1\u5206\u522B\u8868\u793A\u5B57\u4F53\u7C7B\u578B\u4E3ATRUETYPE\u548CTYPE1
+# \u81EA\u5B9A\u4E49\u5B57\u4F53, \u53EF\u9009\u53C2\u6570, \u683C\u5F0F: [\u5B57\u4F53\u540D\u79F0:SansSerif],[\u5B57\u4F53\u6837\u5F0F:plain|bold|italic], \u591A\u4E2A\u5B57\u4F53\u7528'|'\u5206\u9694, \u9ED8\u8BA4: \u968F\u673A
+# \u5F53\u81EA\u5B9A\u4E49\u5B57\u4F53\u914D\u7F6E\u5206\u6790\u5668\u4E3A\u901A\u8FC7\u6587\u4EF6\u52A0\u8F7D\u65F6, \u914D\u7F6E\u683C\u5F0F: [\u5B57\u4F53\u683C\u5F0F:type1|truetype],[\u5B57\u4F53\u6837\u5F0F:plain|bold|italic],<\u6587\u4EF6\u8DEF\u5F84:${root}/fonts/SansSerif.ttf>, \u591A\u4E2A\u5B57\u4F53\u7528'|'\u5206\u9694
 ymp.configs.module.captcha.fonts=
 
 # \u56FE\u7247\u751F\u6210\u6548\u679C\u53C2\u6570\u8BBE\u7F6E: \u7F29\u653E, \u53D6\u503C\u8303\u56F4: [0-1, 0-1], \u9ED8\u8BA4: 1,1
