基于新版框架代码重构

--- a/misc/ymp-conf.properties
+++ b/misc/ymp-conf.properties
@@ -2,11 +2,14 @@
 # module.captcha \u6A21\u5757\u521D\u59CB\u5316\u53C2\u6570
 #-------------------------------------
 
-# \u9A8C\u8BC1\u7801\u6A21\u5757\u662F\u5426\u5DF2\u88AB\u7981\u7528(\u7981\u7528\u540E\u5C06\u5FFD\u7565\u6240\u6709\u9A8C\u8BC1\u7801\u76F8\u5173\u53C2\u6570\u9A8C\u8BC1), \u9ED8\u8BA4\u503C: false
-ymp.configs.module.captcha.disabled=
+# \u9A8C\u8BC1\u7801\u6A21\u5757\u6A21\u5757\u662F\u5426\u5DF2\u542F\u7528(\u7981\u7528\u540E\u5C06\u5FFD\u7565\u6240\u6709\u9A8C\u8BC1\u7801\u76F8\u5173\u53C2\u6570\u9A8C\u8BC1), \u9ED8\u8BA4\u503C: true
+ymp.configs.module.captcha.enabled=
 
 # \u662F\u5426\u5F00\u542F\u8C03\u8BD5\u6A21\u5F0F(\u8C03\u8BD5\u6A21\u5F0F\u4E0B\u63A7\u5236\u53F0\u5C06\u8F93\u51FA\u751F\u6210\u7684\u9A8C\u8BC1\u7801, \u540C\u65F6\u77ED\u4FE1\u9A8C\u8BC1\u7801\u4E5F\u4E0D\u4F1A\u88AB\u771F\u6B63\u53D1\u9001), \u9ED8\u8BA4\u503C: false
 ymp.configs.module.captcha.dev_mode=
+
+# \u5F00\u542F\u9A8C\u8BC1\u7801\u7C7B\u578B, \u53D6\u503C\u8303\u56F4: ALL|DEFAULT|SMS|MAIL, \u9ED8\u8BA4\u503C: ALL
+ymp.configs.module.captcha.captcha_types=
 
 # \u9A8C\u8BC1\u7801\u670D\u52A1\u63D0\u4F9B\u8005\u7C7B, \u9ED8\u8BA4\u503C: net.ymate.module.captcha.impl.DefaultCaptchaProvider
 ymp.configs.module.captcha.provider_class=
@@ -14,13 +17,13 @@ ymp.configs.module.captcha.provider_class=
 # \u81EA\u5B9A\u4E49\u9A8C\u8BC1\u7801\u751F\u6210\u5668\u7C7B, \u9ED8\u8BA4\u503C: \u7A7A
 ymp.configs.module.captcha.token_generator_class=
 
-# \u9A8C\u8BC1\u7801\u5B58\u50A8\u9002\u914D\u5668\u7C7B, \u5FC5\u987B, \u9ED8\u8BA4\u503C: \u7A7A
+# \u9A8C\u8BC1\u7801\u5B58\u50A8\u9002\u914D\u5668\u7C7B, \u9ED8\u8BA4\u503C: net.ymate.module.captcha.impl.DefaultCaptchaStorageAdapter
 ymp.configs.module.captcha.storage_adapter_class=
 
 # \u4F5C\u7528\u57DF\u6807\u8BC6\u6269\u5C55\u5904\u7406\u5668, \u5F00\u542F\u9519\u8BEF\u8BB0\u6570\u65F6\u4E3A\u5FC5\u987B, \u9ED8\u8BA4\u503C: \u7A7A
 ymp.configs.module.captcha.scope_processor_class=
 
-# \u624B\u673A\u77ED\u4FE1\u6216\u90AE\u4EF6\u9A8C\u8BC1\u7801\u53D1\u9001\u670D\u52A1\u63D0\u4F9B\u8005\u7C7B, \u9ED8\u8BA4\u503C: \u7A7A
+# \u624B\u673A\u77ED\u4FE1\u6216\u90AE\u4EF6\u9A8C\u8BC1\u7801\u53D1\u9001\u670D\u52A1\u63D0\u4F9B\u8005\u7C7B, \u9ED8\u8BA4\u503C: net.ymate.module.captcha.impl.DefaultCaptchaSendProvider
 ymp.configs.module.captcha.send_provider_class=
 
 # \u8BBE\u7F6E\u5728\u8FBE\u5230\u6307\u5B9A\u9519\u8BEF\u6B21\u6570\u4E0A\u9650\u540E\u5F00\u542F\u9A8C\u8BC1\u7801, \u9ED8\u8BA4\u503C: 0, \u8868\u793A\u4E0D\u5F00\u542F\u9519\u8BEF\u8BB0\u6570\u7279\u6027
@@ -34,6 +37,12 @@ ymp.configs.module.captcha.token_length_min=
 
 # \u9A8C\u8BC1\u7801\u8D85\u65F6\u65F6\u95F4, \u5355\u4F4D: \u79D2, \u9ED8\u8BA4: \u7A7A, \u7A7A\u6216\u5C0F\u4E8E\u7B49\u4E8E0\u5747\u8868\u793A\u4E0D\u9650\u5236
 ymp.configs.module.captcha.token_timeout=
+
+# \u9ED8\u8BA4\u9A8C\u8BC1\u7801\u63A7\u5236\u5668\u670D\u52A1\u8BF7\u6C42\u6620\u5C04\u524D\u7F00(\u4E0D\u5141\u8BB8'/'\u5F00\u59CB\u548C\u7ED3\u675F), \u9ED8\u8BA4\u503C: ""
+ymp.configs.module.captcha.service_prefix=
+
+# \u662F\u5426\u6CE8\u518C\u9ED8\u8BA4\u9A8C\u8BC1\u7801\u63A7\u5236\u5668, \u9ED8\u8BA4\u503C: false
+ymp.configs.module.captcha.service_enabled=
 
 # \u9AD8\u5EA6, \u9ED8\u8BA4: 70px
 ymp.configs.module.captcha.height=
